samples/_failures_safe/1761005499_ca5fea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1063acb3.c: In function ‘main’:
./samples/SAFE/__tmp_1063acb3.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("\nMatrix 1:\n");
      |     ^~~~~~
